274705: Can't open SQL Editor

--- a/plugins/org.eclipse.datatools.sqltools.result.ui/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.result.ui/build.properties
@@ -3,4 +3,8 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               plugin.properties
+               plugin.properties,\
+               about.html,\
+               icons/,\
+               schema/
+src.includes = about.html
