--- a/plugins/org.eclipse.datatools.sqltools.routineeditor.ui/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.routineeditor.ui/build.properties
@@ -2,4 +2,9 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml
+               plugin.xml,\
+               about.html,\
+               icons/,\
+               schema/,\
+               plugin.properties
+src.includes = about.html
