--- a/plugins/org.eclipse.datatools.sqltools.sql.ui/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sql.ui/build.properties
@@ -2,4 +2,11 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml
+               plugin.xml,\
+               about.html,\
+               icons/,\
+               schema/
+
+               about.html,\
+               icons/
+src.includes = about.html
