--- a/plugins/org.eclipse.datatools.sqltools.debugger.core.ui/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.debugger.core.ui/build.properties
@@ -3,4 +3,7 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               plugin.properties
+               plugin.properties,\
+               about.html,\
+               icons/
+src.includes = about.html
