--- a/plugins/org.eclipse.datatools.sqltools.editor.core.ui/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.editor.core.ui/build.properties
@@ -1,4 +1,8 @@
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               about.html,\
+               schema/,\
+               plugin.xml
+src.includes = about.html
