Added test cases for Object typed parameter.

--- a/tests/org.eclipse.datatools.connectivity.oda.consumer.testdriver/plugin.xml
+++ b/tests/org.eclipse.datatools.connectivity.oda.consumer.testdriver/plugin.xml
@@ -50,6 +50,11 @@
                nativeDataType="BOOLEAN"
                nativeDataTypeCode="16"
                odaScalarDataType="Boolean"/>
+           <dataTypeMapping
+                 nativeDataType="JAVAOBJECT"
+                 nativeDataTypeCode="2000"
+                 odaScalarDataType="JavaObject">
+           </dataTypeMapping>
       </dataSet>
 
    </extension>
