NEW - bug 253584: Systematically detect the Connection Profile Provider ID for a JDBC connection profile https://bugs.eclipse.org/bugs/show_bug.cgi?id=253584

--- a/plugins/org.eclipse.datatools.connectivity.sqm.core/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core/plugin.xml
@@ -10,6 +10,7 @@
    <extension-point id="catalog" name="%CatalogExtensionPointName" schema="schema/catalog.exsd"/>
    <extension-point id="databaseRecognition" name="%DatabaseRecognition" schema="schema/databaseRecognition.exsd"/>
    <extension-point id="metaDataExtension" name="metaDataExtension" schema="schema/metaDataExtension.exsd"/>
+   <extension-point id="mappings" name="Mappings" schema="schema/mappings.exsd"/>
 
    <extension
          point="org.eclipse.datatools.connectivity.sqm.core.logicalContainment">
