--- a/plugins/org.eclipse.datatools.enablement.msft.sqlserver/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.msft.sqlserver/plugin.xml
@@ -342,4 +342,13 @@
 			version="2008">
 		</generator>
 	</extension>
+	
+	<extension
+         point="org.eclipse.datatools.connectivity.sqm.core.mappings">
+      <providerIDtoDriverCategoryID
+            driverCategoryID="org.eclipse.datatools.enablement.msft.sqlserver.driverCategory"
+            providerID="org.eclipse.datatools.enablement.msft.sqlserver.connectionProfile">
+      </providerIDtoDriverCategoryID>
+    </extension>
+	
 </plugin>
