--- a/plugins/org.eclipse.datatools.enablement.sqlite/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.sqlite/plugin.xml
@@ -101,4 +101,11 @@
             version="3.5.9">
       </overrideLoader>
    </extension>
+   <extension
+         point="org.eclipse.datatools.connectivity.sqm.core.mappings">
+      <providerIDtoDriverCategoryID
+            driverCategoryID="org.eclipse.datatools.enablement.sqlite.driver.category"
+            providerID="org.eclipse.datatools.enablement.sqlite.connectionProfile">
+      </providerIDtoDriverCategoryID>
+   </extension>
 </plugin>
