--- a/plugins/org.eclipse.datatools.enablement.sap.maxdb/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.sap.maxdb/plugin.xml
@@ -176,5 +176,12 @@
             provider="org.eclipse.datatools.enablement.sap.maxdb.MaxDBTableConstraintLoader"
             version="7.7">
       </overrideLoader>
+   </extension>
+   <extension
+         point="org.eclipse.datatools.connectivity.sqm.core.mappings">
+      <providerIDtoDriverCategoryID
+            driverCategoryID="org.eclipse.datatools.enablement.sap.maxdb.driverCategory"
+            providerID="org.eclipse.datatools.enablement.sap.maxdb.connectionProfile">
+      </providerIDtoDriverCategoryID>
    </extension>   
 </plugin>
