--- a/plugins/org.eclipse.datatools.enablement.hsqldb/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.hsqldb/plugin.xml
@@ -82,6 +82,13 @@
             name="%connection.profile"
             pingFactory="org.eclipse.datatools.enablement.hsqldb.connection.HSQLDBJDBCConnectionFactory"/>
    </extension>
+   <extension
+         point="org.eclipse.datatools.connectivity.sqm.core.mappings">
+      <providerIDtoDriverCategoryID
+            driverCategoryID="org.eclipse.datatools.enablement.hsqldb.driver.category"
+            providerID="org.eclipse.datatools.enablement.hsqldb.connectionProfile">
+      </providerIDtoDriverCategoryID>
+   </extension>
 
 <!--
    <extension
