--- a/plugins/org.eclipse.datatools.enablement.mysql/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.mysql/plugin.xml
@@ -478,4 +478,11 @@
              version="4.0">
        </overrideLoader>
     </extension>
+    <extension
+          point="org.eclipse.datatools.connectivity.sqm.core.mappings">
+       <providerIDtoDriverCategoryID
+             driverCategoryID="org.eclipse.datatools.enablement.mysql.driverCategory"
+             providerID="org.eclipse.datatools.enablement.mysql.connectionProfile">
+       </providerIDtoDriverCategoryID>
+    </extension>
 </plugin>
