--- a/plugins/org.eclipse.datatools.enablement.postgresql/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.postgresql/plugin.xml
@@ -81,5 +81,12 @@
             name="%POSTGRESQL_JDBC_CONN_FACTORY_NAME"
             profile="org.eclipse.datatools.enablement.postgresql.connectionProfile"/>
    </extension>
+ <extension
+       point="org.eclipse.datatools.connectivity.sqm.core.mappings">
+    <providerIDtoDriverCategoryID
+          driverCategoryID="org.eclipse.datatools.enablement.postgresql.driverCategory"
+          providerID="org.eclipse.datatools.enablement.postgresql.connectionProfile">
+    </providerIDtoDriverCategoryID>
+ </extension>
 
 </plugin>
