--- a/plugins/org.eclipse.datatools.enablement.oracle/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.oracle/plugin.xml
@@ -590,4 +590,11 @@
        </properties> 
     </driverTemplate> 
    </extension>
+   <extension
+         point="org.eclipse.datatools.connectivity.sqm.core.mappings">
+      <providerIDtoDriverCategoryID
+            driverCategoryID="org.eclipse.datatools.enablement.oracle.driverCategory"
+            providerID="org.eclipse.datatools.enablement.oracle.connectionProfile">
+      </providerIDtoDriverCategoryID>
+   </extension>
  </plugin>  
