NEW - bug 253584: Systematically detect the Connection Profile Provider ID for a JDBC connection profile https://bugs.eclipse.org/bugs/show_bug.cgi?id=253584

--- a/plugins/org.eclipse.datatools.enablement.sybase.ase.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.sybase.ase.ui/plugin.xml
@@ -342,4 +342,11 @@
 	         </enablement>
 	      </actionProvider>
 	   </extension>    
-</plugin>
+    <extension
+          point="org.eclipse.datatools.connectivity.sqm.core.mappings">
+       <providerIDtoDriverCategoryID
+             driverCategoryID="org.eclipse.datatools.enablement.sybase.ase.category"
+             providerID="com.sybase.stf.servers.jdbc.ase2.embedded.connectionProfile">
+       </providerIDtoDriverCategoryID>
+    </extension>
+ </plugin>
