--- a/plugins/org.eclipse.datatools.enablement.sybase.asa.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.sybase.asa.ui/plugin.xml
@@ -341,5 +341,12 @@
              </and>
           </enablement>
        </actionProvider>
-	   </extension>  
+	   </extension>
+   <extension
+         point="org.eclipse.datatools.connectivity.sqm.core.mappings">
+      <providerIDtoDriverCategoryID
+            driverCategoryID="org.eclipse.datatools.enablement.sybase.asa.category"
+            providerID="org.eclipse.datatools.enablement.sybase.asa.connectionProfile">
+      </providerIDtoDriverCategoryID>
+   </extension>  
 </plugin>
