NEW - bug 253584: Systematically detect the Connection Profile Provider ID for a JDBC connection profile https://bugs.eclipse.org/bugs/show_bug.cgi?id=253584

--- a/plugins/org.eclipse.datatools.connectivity.apache.derby/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.apache.derby/plugin.xml
@@ -701,5 +701,13 @@
          </properties>
       </driverTemplate>
    </extension>
+   
+    <extension
+    	point="org.eclipse.datatools.connectivity.sqm.core.mappings">
+       <providerIDtoDriverCategoryID
+          driverCategoryID="org.eclipse.datatools.connectivity.db.derby.driverCategory"
+          providerID="org.eclipse.datatools.connectivity.db.derby.embedded.connectionProfile">
+       </providerIDtoDriverCategoryID>
+    </extension>
 
 </plugin>
