--- a/plugins/org.eclipse.datatools.enablement.ingres/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.ingres/plugin.xml
@@ -152,5 +152,12 @@
             version="2006">
       </generator>
    </extension>
+   <extension
+         point="org.eclipse.datatools.connectivity.sqm.core.mappings">
+      <providerIDtoDriverCategoryID
+            driverCategoryID="org.eclipse.datatools.enablement.ingres.driverCategory"
+            providerID="org.eclipse.datatools.enablement.ingres.connectionProfile">
+      </providerIDtoDriverCategoryID>
+   </extension>
 
 </plugin>
