--- a/plugins/org.eclipse.datatools.enablement.ibm.db2.iseries/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.ibm.db2.iseries/plugin.xml
@@ -208,4 +208,11 @@
          </properties>
       </driverTemplate>
    </extension>
+ <extension
+       point="org.eclipse.datatools.connectivity.sqm.core.mappings">
+    <providerIDtoDriverCategoryID
+          driverCategoryID="org.eclipse.datatools.enablement.ibm.db2.iseries.driverCategory"
+          providerID="org.eclipse.datatools.enablement.ibm.db2.iseries.connectionProfile">
+    </providerIDtoDriverCategoryID>
+ </extension>
  </plugin>  
