--- a/plugins/org.eclipse.datatools.enablement.ibm.db2.luw/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.ibm.db2.luw/plugin.xml
@@ -152,4 +152,11 @@
          </properties>
       </driverTemplate>
    </extension>
+   <extension
+         point="org.eclipse.datatools.connectivity.sqm.core.mappings">
+      <providerIDtoDriverCategoryID
+            driverCategoryID="org.eclipse.datatools.enablement.ibm.db2.driverCategory"
+            providerID="org.eclipse.datatools.enablement.ibm.db2.luw.connectionProfile">
+      </providerIDtoDriverCategoryID>
+   </extension>
  </plugin>  
