--- a/plugins/org.eclipse.datatools.enablement.ibm.db2.zseries/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.ibm.db2.zseries/plugin.xml
@@ -164,4 +164,11 @@
          </properties>
       </driverTemplate>
    </extension>
+ <extension
+       point="org.eclipse.datatools.connectivity.sqm.core.mappings">
+    <providerIDtoDriverCategoryID
+          driverCategoryID="org.eclipse.datatools.enablement.ibm.db2.zseries.driverCategory"
+          providerID="org.eclipse.datatools.enablement.ibm.db2.zseries.connectionProfile">
+    </providerIDtoDriverCategoryID>
+ </extension>
  </plugin>  
