--- a/plugins/org.eclipse.datatools.enablement.ibm.informix/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.ibm.informix/plugin.xml
@@ -534,5 +534,12 @@
          </properties>
       </driverTemplate>
    </extension>
+   <extension
+         point="org.eclipse.datatools.connectivity.sqm.core.mappings">
+      <providerIDtoDriverCategoryID
+            driverCategoryID="org.eclipse.datatools.enablement.ibm.informix.driverCategory"
+            providerID="org.eclipse.datatools.enablement.ibm.informix.connectionProfile">
+      </providerIDtoDriverCategoryID>
+   </extension>
    
  </plugin>  
