This commit was manufactured by cvs2svn to create tag 'DTP_1_7_0_RC2_200905250500'.
Sprout from master 2009-05-21 20:01:36 UTC ekapner 'ekapner: BZ 236511'
Cherrypick from master 2008-06-27 09:02:06 UTC Xiaoying Gu <xgu@actuate.com> '[238545]Upgrade all datatools feature version to 1.6.1':
    features/org.eclipse.datatools.intro/feature.properties
    features/org.eclipse.datatools.intro/feature.xml
Cherrypick from master 2009-04-22 03:12:08 UTC Xiaoying Gu <xgu@actuate.com> '[273166]missing required 2 plugins in DTP 1.7.0 daily build 20090422':
    features/org.eclipse.datatools.enablement.feature/feature.xml
Delete:
    .project
    features/org.eclipse.birt.dtp.nl.feature/.project
    features/org.eclipse.birt.dtp.nl.feature/build.properties
    features/org.eclipse.birt.dtp.nl.feature/eclipse_update_120.jpg
    features/org.eclipse.birt.dtp.nl.feature/epl-v10.html
    features/org.eclipse.birt.dtp.nl.feature/feature.properties
    features/org.eclipse.birt.dtp.nl.feature/feature.xml
    features/org.eclipse.birt.dtp.nl.feature/license.html
    features/org.eclipse.datatools.enablement.oda.ecore.feature/.project
    features/org.eclipse.datatools.enablement.oda.ecore.feature/build.properties
    features/org.eclipse.datatools.enablement.oda.ecore.feature/eclipse_update_120.jpg
    features/org.eclipse.datatools.enablement.oda.ecore.feature/epl-v10.html
    features/org.eclipse.datatools.enablement.oda.ecore.feature/feature.properties
    features/org.eclipse.datatools.enablement.oda.ecore.feature/feature.xml
    features/org.eclipse.datatools.enablement.oda.ecore.feature/license.html
    features/org.eclipse.datatools.enablement.oda.ecore.feature/sourceTemplateFeature/build.properties
    features/org.eclipse.datatools.enablement.oda.ecore.feature/sourceTemplateFeature/eclipse_update_120.jpg
    features/org.eclipse.datatools.enablement.oda.ecore.feature/sourceTemplateFeature/epl-v10.html
    features/org.eclipse.datatools.enablement.oda.ecore.feature/sourceTemp

--- a/features/org.eclipse.datatools.intro/feature.properties
+++ b/features/org.eclipse.datatools.intro/feature.properties
@@ -1,13 +1,13 @@
 # feature.properties file for org.eclipse.datatools.intro
 #
 
-copyright=Copyright (c) 2009 Sybase, Inc. and others
+copyright=Copyright (c) 2006 Sybase, Inc. and others
 
 # "featureName" property - name of the feature
 featureName=Data Tools Platform Intro
 
 # "providerName" property - name of the company that provides the feature
-providerName=Eclipse Data Tools Platform
+providerName=Eclipse.org
 
 # "updateSiteName" property - label for the update site
 updateSiteName=Data Tools Platform (DTP) Updates
