--- a/plugins/org.eclipse.datatools.sqltools.result.ui/src/org/eclipse/datatools/sqltools/result/ui/PluginResources.properties
+++ b/plugins/org.eclipse.datatools.sqltools.result.ui/src/org/eclipse/datatools/sqltools/result/ui/PluginResources.properties
@@ -182,6 +182,8 @@ SQLResultsViewPage_resultsetoptions_lessthanzero=Can't be less than zero
 SQLResultsViewPage_resultsetoptions_displaybiggerthanmax=Max display row count is bigger than max row count
 SQLResultsViewPage_resultsetoptions_invalidnumberformat=Invalid number format
 SQLResultsViewPage_resultsetoptions_maxrowcount_tooltip=Will only fetch the specified number of rows in result set (0 = All rows)
+SQLResultsViewPage_show_label=When available, show column labels as column headings
+SQLResultsViewPage_show_label_tooltip=When checked, database column labels are used for the result column headings, when available.  When unchecked, column names are used for the column headings
 
 ExportFormatPage_title=Export Format
 ExportOptions_title = Export options
