--- a/plugins/org.eclipse.datatools.enablement.sybase/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase/plugin.properties
@@ -1,5 +1,5 @@
 Plugin.name = High-level Sybase Enablement Plug-in
-Plugin.providerName = Eclipse.org
+Plugin.providerName = Eclipse Data Tools Platform
 
 sybase.drivers.category = Sybase
 sybase.drivers.category.description = Drivers associated with Sybase products
