NEW - bug 278533: a number of bundles missing about.html files https://bugs.eclipse.org/bugs/show_bug.cgi?id=278533

--- a/plugins/org.eclipse.datatools.connectivity.oda.design/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design/plugin.properties
@@ -10,7 +10,7 @@
 # *  
 # *************************************************************************
 # *
-# * $Id: plugin.properties,v 1.3 2006/03/07 02:00:04 lchan Exp $
+# * $Id: plugin.properties,v 1.4 2008/07/23 04:12:28 lchan Exp $
 # ====================================================================
 #
 # ====================================================================
@@ -26,5 +26,5 @@
 # ====================================================================
 #
 pluginName=DTP ODA Design Session Model
-providerName = Eclipse.org
+providerName = Eclipse Data Tools Platform
 
