--- a/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/plugin.properties
@@ -9,7 +9,7 @@
 #     IBM Corporation - initial API and implementation
 ###############################################################################
 pluginName=Eclipse Data Tools Platform Server UI Plug-in
-providerName=Eclipse.org
+providerName=Eclipse Data Tools Platform
 serverExplorerLayout=Server Explorer Layout Extension
 serverExplorerInitialization=Server Initialization Provider
 SQL_MODEL_CONTENT_EXTENSION_NAME=SQL Model Content Extension
