--- a/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.properties
@@ -9,7 +9,7 @@
 ##    Sybase, Inc. - initial API and implementation
 ################################################################################ 
 Plugin.Name = Eclipse Data Tools Platform Data Source Explorer Plug-in
-Plugin.ProviderName = Eclipse.org
+Plugin.ProviderName = Eclipse Data Tools Platform
 
 DSE.Connect.label = &Connect
 DSE.Disconnect.label = &Disconnect
