--- a/plugins/org.eclipse.datatools.connectivity.ui.templates/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui.templates/plugin.properties
@@ -11,7 +11,7 @@
 
 #Properties file for org.eclipse.datatools.connectivity.ui.templates
 Bundle-Name.0 = DTP Connectivity Templates Plug-in
-Plugin.ProviderName = Eclipse.org
+Plugin.ProviderName = Eclipse Data Tools Platform
 wizard.name.profile = Plug-in with a DTP connection profile
 wizard.name.profile.description=\
 This wizard creates a plug-in for a DTP Connection Profile.\
