--- a/plugins/org.eclipse.datatools.connectivity.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/plugin.properties
@@ -9,7 +9,7 @@
 ##    Sybase, Inc. - initial API and implementation
 ################################################################################ 
 Plugin.Name = Data Tools Platform Connectivity UI Plug-in
-Plugin.ProviderName = Eclipse.org
+Plugin.ProviderName = Eclipse Data Tools Platform
 
 Database.category = Databases
 Extension.PropertyPage.General.Name = Common
