--- a/plugins/org.eclipse.datatools.connectivity.sqm.core/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core/plugin.properties
@@ -9,7 +9,7 @@
 #     IBM Corporation - initial API and implementation
 ###############################################################################
 pluginName=Eclipse Data Tools Platform SQM Core Plug-in
-providerName=Eclipse.org
+providerName=Eclipse Data Tools Platform
 databaseDefinitionExtensionPointName=Database Definition
 logicalContainmentExtensionPointName=Logical Containment
 DataModelElementFactoryExtensionPointName=Data Model Element Factory
