--- a/plugins/org.eclipse.datatools.modelbase.derby/plugin.properties
+++ b/plugins/org.eclipse.datatools.modelbase.derby/plugin.properties
@@ -1,7 +1,7 @@
 # <copyright>
 # </copyright>
 #
-# $Id: plugin.properties,v 1.2 2006/03/08 00:49:39 dpchou Exp $
+# $Id: plugin.properties,v 1.3 2006/05/10 14:22:09 jgraham Exp $
 
 # ====================================================================
 # To code developer:
@@ -16,5 +16,5 @@
 # ====================================================================
 
 pluginName = Eclipse Data Tools Platform Derby Model Plug-in
-providerName = Eclipse.org
+providerName = Eclipse Data Tools Platform
 
