--- a/plugins/org.eclipse.datatools.enablement.hsqldb/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.hsqldb/plugin.properties
@@ -1,4 +1,4 @@
-Bundle-Vendor = Eclipse.org
+Bundle-Vendor = Eclipse Data Tools Platform
 Bundle-Name = Eclipse Data Tools Platform HSQLDB Enablement Plug-in
 
 navigator.content.name = HSQLDB Profile Content Extension
