NEW - bug 278533: a number of bundles missing about.html files https://bugs.eclipse.org/bugs/show_bug.cgi?id=278533

--- a/plugins/org.eclipse.datatools.enablement.sqlite.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.sqlite.ui/plugin.properties
@@ -6,7 +6,7 @@ CONNECTION_URL_PROPERTY_NAME=Connection URL
 USER_ID_PROPERTY_NAME=User ID
 PASSWORD_PROPERTY_NAME=Password
 
-Bundle-Vendor = Eclipse.org
+Bundle-Vendor = Eclipse Data Tools Platform
 Bundle-Name = Eclipse Data Tools Platform SQLite UI Enablement Plug-in
 profile.page.name = SQLite Profile Properties
 
