--- a/plugins/org.eclipse.datatools.enablement.sqlite.dbdefinition/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.sqlite.dbdefinition/plugin.properties
@@ -1,4 +1,4 @@
-Bundle-Vendor = Eclipse.org
+Bundle-Vendor = Eclipse Data Tools Platform
 Bundle-Name = Eclipse Data Tools Platform SQLite Database Definition Enablement Plug-in
 
 product.display.string = SQLite
