--- a/plugins/org.eclipse.datatools.enablement.sqlite/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.sqlite/plugin.properties
@@ -1,4 +1,4 @@
-Bundle-Vendor = Eclipse.org
+Bundle-Vendor = Eclipse Data Tools Platform
 Bundle-Name = Eclipse Data Tools Platform SQLite Enablement Plug-in
 
 driver.category.name = SQLite
