NEW - bug 278533: a number of bundles missing about.html files https://bugs.eclipse.org/bugs/show_bug.cgi?id=278533

--- a/plugins/org.eclipse.datatools.connectivity.dbdefinition.genericJDBC/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.dbdefinition.genericJDBC/plugin.properties
@@ -9,6 +9,6 @@
 #     IBM Corporation - initial API and implementation
 ###############################################################################
 pluginName=Eclipse Data Tools Platform DBDefinition Generic JDBC Plug-in
-providerName=Eclipse.org
+providerName=Eclipse Data Tools Platform
 1.0_ProductString = Generic JDBC
 1.0_VersionString = 1.0
