--- a/plugins/org.eclipse.datatools.connectivity.apache.derby/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.apache.derby/plugin.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 
 pluginName = Eclipse Data Tools Platform Derby Plug-in
-providerName = Eclipse.org
+providerName = Eclipse Data Tools Platform
 
 DERBY_CONNECTION_PROFILE_NAME=Derby Embedded Database
 DERBY_JDBC_CONNECTION_FACTORY_NAME=JDBC Connection
