NEW - bug 278533: a number of bundles missing about.html files https://bugs.eclipse.org/bugs/show_bug.cgi?id=278533

--- a/plugins/org.eclipse.datatools.enablement.postgresql/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.postgresql/plugin.properties
@@ -11,3 +11,6 @@ PASSWORD_PROPERTY_NAME=Password
 
 POSTGRESQL_PROFILE_NAME=PostgreSQL JDBC Connection
 POSTGRESQL_JDBC_CONN_FACTORY_NAME=PostgreSQL JDBC Connection Factory
+
+pluginName=PostgreSQL Connection Profile and Driver Template Plug-in
+providerName=Eclipse Data Tools Platform
