--- a/plugins/org.eclipse.datatools.enablement.postgresql.dbdefinition/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.postgresql.dbdefinition/build.properties
@@ -2,7 +2,8 @@ bin.includes = META-INF/,\
                .,\
                runtime/,\
                plugin.xml,\
-               about.html
+               about.html,\
+               plugin.properties
 src.dir	= src/
 plugin.version =	1.0.0.200706071
 javadoc.dir =		doc/api/
