NEW - bug 278533: a number of bundles missing about.html files https://bugs.eclipse.org/bugs/show_bug.cgi?id=278533

--- a/plugins/org.eclipse.datatools.sqltools.db.derby/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.db.derby/build.properties
@@ -5,7 +5,8 @@ bin.includes = plugin.xml,\
                META-INF/,\
                default.properties,\
                about.html,\
-               icons/
+               icons/,\
+               plugin.properties
 
 src.dir =		src/
 plugin.version =	1.0.0.200802191
