--- a/plugins/org.eclipse.datatools.sqltools.db.derby/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.db.derby/plugin.properties
@@ -8,8 +8,5 @@
 # Contributors:
 #     Sybase, Inc. - initial API and implementation
 ###############################################################################
-Plugin.Name = Eclipse Data Tools Platform SQL Tools Generic Database UI Plug-in
+Plugin.Name = Eclipse Data Tools Platform Derby SQL Tools Plug-in
 Plugin.ProviderName = Eclipse Data Tools Platform
-
-generic.db=Generic JDBC
-generic.db.desc=Data Tools UI generic database support
