--- a/plugins/org.eclipse.datatools.sqltools.db.derby.ui/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.db.derby.ui/build.properties
@@ -4,5 +4,6 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                icons/,\
-               about.html
+               about.html,\
+               plugin.properties
 src.includes = about.html
