NEW - bug 278533: a number of bundles missing about.html files https://bugs.eclipse.org/bugs/show_bug.cgi?id=278533

--- a/plugins/org.eclipse.datatools.enablement.ibm.db2.luw.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.ibm.db2.luw.ui/plugin.properties
@@ -9,7 +9,7 @@
 #     IBM Corporation - initial API and implementation
 ###############################################################################
 pluginName=Eclipse Data Tools Platform IBM DB2 UDB LUW UI Plug-in
-providerName=Eclipse.org
+providerName=Eclipse Data Tools Platform
 
 profile.db2.luw.wizard.title = DB2 for Linux, UNIX, and Windows
 profile.db2.luw.wizard.description = Create a DB2 for Linux, UNIX, and Windows connection profile.
