--- a/plugins/org.eclipse.datatools.enablement.ibm.informix/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.ibm.informix/plugin.properties
@@ -9,7 +9,7 @@
 #     IBM Corporation - initial API and implementation
 ###############################################################################
 pluginName=Eclipse Data Tools Platform Informix Plug-in
-providerName=Eclipse.org
+providerName=Eclipse Data Tools Platform
 
 driverClass = Driver Class
 driverVendor = Vendor
