NEW - bug 278533: a number of bundles missing about.html files https://bugs.eclipse.org/bugs/show_bug.cgi?id=278533

--- a/plugins/org.eclipse.datatools.enablement.ingres.dbdefinition/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.ingres.dbdefinition/plugin.properties
@@ -10,6 +10,7 @@
 ################################################################################
 
 PLUGIN_NAME = Ingres DTP Database Definition Plug-in
+PROVIDER_NAME=Eclipse Data Tools Platform
 
 PRODUCT_DISPLAY_STRING = Ingres
 VERSION_DISPLAY_STRING = 2006
