--- a/plugins/org.eclipse.datatools.enablement.ingres.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.ingres.ui/plugin.properties
@@ -10,6 +10,7 @@
 ################################################################################
 
 PLUGIN_NAME = Ingres DTP UI Plug-in
+PROVIDER_NAME=Eclipse Data Tools Platform
 
 # new connection profile wizard
 WIZARD_NAME        = Ingres
