--- a/plugins/org.eclipse.datatools.enablement.ingres/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.ingres/plugin.properties
@@ -10,6 +10,7 @@
 ################################################################################
 
 PLUGIN_NAME = Ingres DTP Plug-in
+PROVIDER_NAME = Eclipse Data Tools Platform
 
 # Parent category for Ingres in the driver definition
 CATEGORY_PRODUCT_FAMILY_NAME        = Ingres
