NEW - bug 278533: a number of bundles missing about.html files https://bugs.eclipse.org/bugs/show_bug.cgi?id=278533

--- a/plugins/org.eclipse.datatools.enablement.sybase.asa.dbdefinition/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase.asa.dbdefinition/plugin.properties
@@ -9,7 +9,7 @@
 # Contributors: Sybase - initial API and implementation
 ###############################################################################
 pluginName=Eclipse Data Tools Platform Sybase ASA Database Definition
-providerName=Eclipse.org
+providerName=Eclipse Data Tools Platform
 
 9.xProductString = Sybase Adaptive Server Anywhere (ASA)
 10.xProductString = Sybase Adaptive Server Anywhere (ASA)
