--- a/plugins/org.eclipse.datatools.enablement.sybase.asa.schemaobjecteditor.examples/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase.asa.schemaobjecteditor.examples/build.properties
@@ -6,8 +6,10 @@ bin.includes = META-INF/MANIFEST.MF,\
                plugin.xml,\
                .,\
                build.properties,\
-               default.properties
+               default.properties,\
+               about.html
 source.. = src/
 output.. = bin/
 javacTarget=1.5
 javacSource=1.5
+src.includes = about.html
