--- a/plugins/org.eclipse.datatools.enablement.sybase.asa.schemaobjecteditor.examples/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase.asa.schemaobjecteditor.examples/plugin.properties
@@ -1,5 +1,5 @@
-plugin.name=Sybase WorkSpace ASA Development
-providerName=Sybase, Inc.
+plugin.name=Sybase ASA Schema Object Editor
+providerName=Eclipse Data Tools Platform
 #msgwizard
 category.function.name=Real time data functions
 category.sp.name=Real time stored procedures
