--- a/plugins/org.eclipse.datatools.enablement.sybase.asa.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase.asa.ui/plugin.properties
@@ -18,6 +18,6 @@ proxytable.node.name = Proxy Table Folder
 datatype.node.name = Data Type Folder
 
 Plugin.name = Sybase ASA Connection Profile UI Plug-in
-Plugin.providerName = Eclipse.org
+Plugin.providerName = Eclipse Data Tools Platform
 
 decorator.label = Sybase ASA Proxy Table Decorator
