--- a/plugins/org.eclipse.datatools.enablement.sybase.ase.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase.ase.ui/plugin.properties
@@ -26,6 +26,6 @@ proxytable.node.name = Proxy Table Folder
 webservicetable.node.name = Web Services as Tables Folder
 
 pluginName = ASE Enablement UI Plug-in
-providerName = Eclipse.org
+providerName = Eclipse Data Tools Platform
 
 decorator.label = Sybase ASE Proxy Table Decorator
