--- a/plugins/org.eclipse.datatools.enablement.sybase.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase.ui/plugin.properties
@@ -34,7 +34,7 @@ proxytable.node.name = Proxy Table Folder
 webservicetable.node.name = Web Services as Tables Folder
 
 pluginName = Sybase UI Plug-in
-providerName = Eclipse.org
+providerName = Eclipse Data Tools Platform
 
 database.connection.profile.title = Database Connection Profile
 
