--- a/plugins/org.eclipse.datatools.enablement.sybase.asa.models/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase.asa.models/plugin.properties
@@ -1,7 +1,7 @@
 # <copyright>
 # </copyright>
 #
-# $Id: plugin.properties,v 1.1 2006/08/25 18:27:18 brianf Exp $
+# $Id: plugin.properties,v 1.1 2007/03/05 15:52:18 jgraham Exp $
 
 # ====================================================================
 # To code developer:
@@ -16,5 +16,5 @@
 # ====================================================================
 
 pluginName = Sybase ASA SQL Model
-providerName = Eclipse.org
+providerName = Eclipse Data Tools Platform
 
