--- a/plugins/org.eclipse.datatools.enablement.sybase.asa/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase.asa/plugin.properties
@@ -22,4 +22,4 @@ org.eclipse.datatools.enablement.sybase.asa.9_x.other.driverTemplate = Other Dri
 org.eclipse.datatools.enablement.sybase.asa.10_0.other.driverTemplate = Other Driver
 
 Plugin.name = Sybase ASA Plug-in
-Plugin.providerName = Eclipse.org
+Plugin.providerName = Eclipse Data Tools Platform
