--- a/plugins/org.eclipse.datatools.enablement.sybase.ase/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase.ase/plugin.properties
@@ -1,5 +1,5 @@
 Plugin.name = JDBC/Sybase ASE Connection Profile Plug-in
-Plugin.providerName = Eclipse.org
+Plugin.providerName = Eclipse Data Tools Platform
 
 12.xProductString = Sybase Adaptive Server Enterprise (ASE)
 12.xVersionString = 12.x
