--- a/plugins/org.eclipse.datatools.enablement.sybase.models/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase.models/plugin.properties
@@ -1,7 +1,7 @@
 # <copyright>
 # </copyright>
 #
-# $Id: plugin.properties,v 1.2 2008/03/27 17:12:28 jgraham Exp $
+# $Id: plugin.properties,v 1.1 2008/04/28 17:10:56 bfitzpatrick Exp $
 
 # ====================================================================
 # To code developer:
@@ -16,5 +16,5 @@
 # ====================================================================
 
 pluginName = Sybase Model Plug-in
-providerName = Eclipse.org
+providerName = Eclipse Data Tools Platform
 
