NEW - bug 278533: a number of bundles missing about.html files https://bugs.eclipse.org/bugs/show_bug.cgi?id=278533

--- a/plugins/org.eclipse.datatools.modelbase.sql.query.edit/plugin.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql.query.edit/plugin.properties
@@ -13,7 +13,7 @@
 
 
 # ====================================================================
-# $Id: plugin.properties,v 1.2 2008/01/31 02:58:42 bpayton Exp $
+# $Id: plugin.properties,v 1.3 2008/06/06 19:28:55 ledunnel Exp $
 # @generated NOT
 # ====================================================================
 
@@ -34,7 +34,7 @@
 ###
 pluginName = SQL Query Edit Support Plugin
 nl1PluginName = SQL Query Edit Support Nl1 Fragment
-providerName = Eclipse.org
+providerName = Eclipse Data Tools Platform
 
 ###
 ### Note to translators:  do not translate words that are in UPPER CASE in the
