--- a/plugins/org.eclipse.datatools.modelbase.sql.query/plugin.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql.query/plugin.properties
@@ -2,7 +2,7 @@
 # ====================================================================
 
 # ====================================================================
-# $Id: plugin.properties,v 1.3 2006/03/06 22:00:54 jgraham Exp $
+# $Id: plugin.properties,v 1.4 2006/05/10 14:30:22 jgraham Exp $
 # @generated NOT
 # ====================================================================
 
@@ -20,5 +20,5 @@
 
 pluginName = Eclipse Data Tools Platform SQL Query Model Plugin
 nl1PluginName = SQL Query Model Nl1 Fragment
-providerName = Eclipse.org
+providerName = Eclipse Data Tools Platform
 
