--- a/plugins/org.eclipse.datatools.modelbase.sql.xml.query/plugin.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql.xml.query/plugin.properties
@@ -2,7 +2,7 @@
 # ====================================================================
 
 # ====================================================================
-# $Id: plugin.properties,v 1.3 2006/03/06 22:01:44 jgraham Exp $
+# $Id: plugin.properties,v 1.4 2006/05/10 14:31:45 jgraham Exp $
 # @generated NOT
 # ====================================================================
 
@@ -20,4 +20,4 @@
 
 pluginName = Eclipse Data Tools Platform SQL XML Query Model Plugin
 nl1PluginName = SQL XML Query Model Nl1 Fragment
-providerName = Eclipse.org
+providerName = Eclipse Data Tools Platform
