NEW - bug 278533: a number of bundles missing about.html files https://bugs.eclipse.org/bugs/show_bug.cgi?id=278533

--- a/plugins/org.eclipse.datatools.sqltools.common.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.common.ui/plugin.properties
@@ -12,3 +12,6 @@
 ## Preferences
 #
 datatools.core.ui.preferences.data = SQL Development
+
+Plugin.Name = Eclipse Data Tools Platform SQL Tools Common UI Plug-in
+Plugin.ProviderName = Eclipse Data Tools Platform
