--- a/plugins/org.eclipse.datatools.sqltools.result.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.result.ui/plugin.properties
@@ -1,3 +1,13 @@
+###############################################################################
+# Copyright (c) 2009 Sybase, Inc. and others.
+# All rights reserved. This program and the accompanying materials
+# are made available under the terms of the Eclipse Public License v1.0
+# which accompanies this distribution, and is available at
+# http://www.eclipse.org/legal/epl-v10.html
+# 
+# Contributors:
+#     Sybase, Inc. - initial API and implementation
+###############################################################################
 SQLResultsView.name=SQL Results
 SQLResultsView.full.name=SQL Results View
 SQLResultsView.display.options=SQL Results View Options
@@ -13,3 +23,6 @@ Outputter.xml=XML
 Outputter.html=HTML
 Outputter.csv=CSV File
 Bundle-Name.0 = Ui Plug-in
+
+Plugin.Name = Eclipse Data Tools Platform SQL Results View UI Plug-in
+Plugin.ProviderName = Eclipse Data Tools Platform
