--- a/plugins/org.eclipse.datatools.sqltools.schemaobjecteditor.ui/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.schemaobjecteditor.ui/build.properties
@@ -3,7 +3,8 @@ bin.includes = plugin.xml,\
                plugin.properties,\
                META-INF/MANIFEST.MF,\
                icons/,\
-               schema/schemaObjectEditor.exsd
+               schema/schemaObjectEditor.exsd,\
+               about.html
 plugin.version = 1.1.0.qualifier
 qualifier=200810071
 jars.compile.order = .
@@ -11,3 +12,4 @@ source.. = src/
 output.. = bin/              
 javacTarget=1.5
 javacSource=1.5
+src.includes = about.html
