--- a/plugins/org.eclipse.datatools.sqltools.schemaobjecteditor/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.schemaobjecteditor/plugin.properties
@@ -8,10 +8,5 @@
 ## Contributors:
 ##    Sybase, Inc. - initial API and implementation
 ################################################################################ 
-SchemaEditor.preference.page.name=Schema Object Editor Configuration
-SchemaEditor.name=Schema Object Editor
-
-plugin.name=Schema Object Editor Framework
-providerName=Eclipse Data Tools Platform
-schemaobjecteditor.command.refreshfromserver = Refresh from Server
-schemaobjecteditor.command.revert = Revert Object
+Plugin.Name = Schema Object Editor Plug-in
+Plugin.ProviderName = Eclipse Data Tools Platform
