--- a/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/plugin.properties
@@ -1,7 +1,17 @@
+###############################################################################
+# Copyright (c) 2008 Sybase, Inc. and others.
+# All rights reserved. This program and the accompanying materials
+# are made available under the terms of the Eclipse Public License v1.0
+# which accompanies this distribution, and is available at
+# http://www.eclipse.org/legal/epl-v10.html
+# 
+# Contributors:
+#     Sybase, Inc. - initial API and implementation
+###############################################################################
 ! Properties file for component:  SQL Scrapbook
 
 pluginName   = Eclipse Data Tools Platform Sqlscrapbook Plug-in
-providerName = Eclipse.org
+providerName = Eclipse Data Tools Platform
 
 _UI_MENU_SELECT_CONNECTION= Select &Connection
 
