--- a/plugins/org.eclipse.datatools.sqltools.editor.core.ui/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.editor.core.ui/build.properties
@@ -4,5 +4,6 @@ bin.includes = META-INF/,\
                .,\
                about.html,\
                schema/,\
-               plugin.xml
+               plugin.xml,\
+               plugin.properties
 src.includes = about.html
