--- a/plugins/org.eclipse.datatools.sqltools.parsers.sql.query/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.parsers.sql.query/plugin.properties
@@ -13,4 +13,4 @@
 !-- plugin.xml 
 pluginName = Eclipse Data Tools Platform SQL Query Parser Plugin
 nl1PluginName 	= SQL Query Parser Nl1 Fragment
-providerName = Eclipse.org
+providerName = Eclipse Data Tools Platform
