--- a/plugins/org.eclipse.datatools.sqltools.result/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.result/plugin.properties
@@ -1,17 +1,12 @@
-# NLS_MESSAGEFORMAT_VAR          needed to handle quotes correctly
 ###############################################################################
-# Copyright (c) 2001, 2006 IBM Corporation and others.
+# Copyright (c) 2009 Sybase, Inc. and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
 # http://www.eclipse.org/legal/epl-v10.html
 # 
 # Contributors:
-#     IBM Corporation - initial API and implementation
+#     Sybase, Inc. - initial API and implementation
 ###############################################################################
-
-plugin.TableDataEditor=Table Data Editor
-plugin.Data=Data
-plugin.Name=Data UI Plugin
-nl1PluginName = Data UI NL1 Fragment
-plugin.Provider=Eclipse Data Tools Platform
+Plugin.Name = Eclipse Data Tools Platform SQL Results View Plug-ins
+Plugin.ProviderName = Eclipse Data Tools Platform
