--- a/plugins/org.eclipse.datatools.sqltools.routineeditor.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.routineeditor.ui/plugin.properties
@@ -1,3 +1,13 @@
+###############################################################################
+# Copyright (c) 2009 Sybase, Inc. and others.
+# All rights reserved. This program and the accompanying materials
+# are made available under the terms of the Eclipse Public License v1.0
+# which accompanies this distribution, and is available at
+# http://www.eclipse.org/legal/epl-v10.html
+# 
+# Contributors:
+#     Sybase, Inc. - initial API and implementation
+###############################################################################
 Routineeditor.edit= &Edit...
 Routineeditor.run= &Run...
 
@@ -12,3 +22,5 @@ routine.launch.type=Eclipse Data Tools
 DatabaseManagement.command.savetodb=Save to Database
 DatabaseManagement.command.refresh=Refresh from Database
 
+Plugin.Name = Eclipse Data Tools Platform SQL Tools Routine Editor UI Plug-in
+Plugin.ProviderName = Eclipse Data Tools Platform
