--- a/plugins/org.eclipse.datatools.sqltools.schemaobjecteditor.ui.pages/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.schemaobjecteditor.ui.pages/plugin.properties
@@ -1,5 +1,15 @@
+###############################################################################
+# Copyright (c) 2009 Sybase, Inc. and others.
+# All rights reserved. This program and the accompanying materials
+# are made available under the terms of the Eclipse Public License v1.0
+# which accompanies this distribution, and is available at
+# http://www.eclipse.org/legal/epl-v10.html
+# 
+# Contributors:
+#     Sybase, Inc. - initial API and implementation
+###############################################################################
 Introduction_page_name=Introduction
 DDL_page_name=DDL
 
-plugin.name=Sybase WorkSpace Shcema Object Editor Page
-providerName=Sybase, Inc.
+plugin.name=Schema Object Editor Pages Plug-in
+providerName=Eclipse Data Tools Platform
