--- a/plugins/org.eclipse.datatools.sqltools.sql.ui/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sql.ui/build.properties
@@ -5,7 +5,8 @@ bin.includes = META-INF/,\
                plugin.xml,\
                about.html,\
                icons/,\
-               schema/
+               schema/,\
+               plugin.properties
 
                about.html,\
                icons/
