--- a/plugins/org.eclipse.datatools.sqltools.sql/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sql/build.properties
@@ -3,7 +3,8 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                icons/,\
-               about.html
+               about.html,\
+               plugin.properties
 
 src.dir =		src/
 plugin.version =	1.0.0.200802191
