--- a/plugins/org.eclipse.datatools.sqltools.tabledataeditor/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.tabledataeditor/plugin.properties
@@ -9,4 +9,4 @@
 #     IBM Corporation - initial API and implementation
 ###############################################################################
 pluginName=Eclipse Data Tools Platform Table Data Editor Plug-in
-providerName=Eclipse.org
+providerName=Eclipse Data Tools Platform
