--- a/plugins/org.eclipse.datatools.sqltools.parsers.sql.lexer/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.parsers.sql.lexer/build.properties
@@ -3,7 +3,8 @@ output.. = bin/
 bin.includes = plugin.xml,\
                .,\
                META-INF/,\
-               about.html
+               about.html,\
+               plugin.properties
 
 src.dir = src/
 plugin.version = 1.0.0.200706161
