--- a/plugins/org.eclipse.datatools.enablement.ingres.dbdefinition/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.ingres.dbdefinition/build.properties
@@ -3,3 +3,4 @@ bin.includes = META-INF/,\
                runtime/,\
                plugin.properties,\
                about.html
+src.includes = about.html
