--- a/plugins/org.eclipse.datatools.enablement.ingres/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.ingres/build.properties
@@ -6,3 +6,4 @@ bin.includes = META-INF/,\
                plugin.xml,\
                icons/,\
                about.html
+src.includes = about.html
