[279400]: at least 300 plugins do not have about.html files (head and 1.7.0 branch)

--- a/plugins/org.eclipse.datatools.enablement.sybase.asa.ui/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase.asa.ui/build.properties
@@ -4,7 +4,8 @@ bin.includes = META-INF/,\
                plugin.xml,\
                icons/,\
                plugin.properties,\
-               .
+               .,\
+               about.html
 jars.compile.order = .
 plugin.version =	1.0.1.200801241
 src.includes = about.html
