--- a/plugins/org.eclipse.datatools.enablement.oda.ws.ui/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ws.ui/build.properties
@@ -18,4 +18,4 @@ bin.includes = plugin.xml,\
                icons/,\
                about.html,\
                about_files/
-src.includes = build.properties
+src.includes = about.html
