Fix the bugzilla bug 280028 : Property Binding of Web Services data set

--- a/plugins/org.eclipse.datatools.enablement.oda.ws/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.oda.ws/plugin.xml
@@ -95,6 +95,8 @@
                      type="string">
                </property>
             </propertyGroup>
+            <propertyVisibility name="queryText" visibility="hide"/>
+            <propertyVisibility name="xsdFileURI" visibility="hide"/>
             <propertyVisibility
                   name="operationTrace"
                   visibility="hide">
