Fix the 280028 : Property Binding of Web Services data set

--- a/plugins/org.eclipse.datatools.enablement.oda.ws/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.oda.ws/plugin.xml
@@ -97,6 +97,7 @@
             </propertyGroup>
             <propertyVisibility name="queryText" visibility="hide"/>
             <propertyVisibility name="xsdFileURI" visibility="hide"/>
+            <propertyVisibility name="xmlFileURI" visibility="hide"/>
             <propertyVisibility
                   name="operationTrace"
                   visibility="hide">
