[284866] Fixed Results view History Options preference page in plugin o.e.d.sqltools.result.ui to use translatable text instead of hard-coded English text

--- a/plugins/org.eclipse.datatools.sqltools.result.ui/src/org/eclipse/datatools/sqltools/result/ui/PluginResources.properties
+++ b/plugins/org.eclipse.datatools.sqltools.result.ui/src/org/eclipse/datatools/sqltools/result/ui/PluginResources.properties
@@ -306,6 +306,20 @@ ResultsFilterDialog_unknownprofile_tooltip=Unresolvable connection profile: A de
 ResultsFilterDialog_criticalerror_tooltip=Check it to display critical error results
 
 ##########################################################
+# History Options preference page
+##########################################################
+ResultHistoryPage_columns_group_name=Columns Setting
+ResultHistoryPage_columns_selectedlist_name=Selected Columns:
+ResultHistoryPage_columns_availablelist_name=Available Columns:
+ResultHistoryPage_connection_profile=Co&nnection Profile
+ResultHistoryPage_tooltip_operation=Check to show 'Operation' column
+ResultHistoryPage_tooltip_frequency=Check to show 'Frequency' column
+ResultHistoryPage_tooltip_actiontype=Check to show 'Action Type' column
+ResultHistoryPage_no_column_selected=At least one column should be selected
+ResultHistoryPage_tooltip_auto_persist=Save result history when Eclipse shuts down and load result history to SQL Results view when Eclipse starts up
+ResultHistoryPage_tooltip_auto_clean=Clean up result history when Eclipse shuts down
+
+##########################################################
 # Others
 ##########################################################
 Parameter_constructor_error=Error occurs when constructing Parameter instance: invalid parameters
@@ -328,16 +342,7 @@ ContainerSelectionGroup_message=&Enter or select the parent folder:
 ContainerSelectionGroup_folder_select=Select the folder:
 ResultHistoryLuceneIndex_io_error=Unexpected RAM I/O exception occurs
 ResultHistoryLuceneIndex_parser_error=Unexpected parsing exception occurs
-ResultHistoryPage_columns_group_name=Columns Setting
-ResultHistoryPage_columns_selectedlist_name=Selected Columns:
-ResultHistoryPage_columns_availablelist_name=Available Columns:
-ResultHistoryPage_connection_profile=Co&nnection Profile
-ResultHistoryPage_tooltip_operation=Check to show 'Operation' column
-ResultHistoryPage_tooltip_frequency=Check to show 'Frequency' column
-ResultHistoryPage_tooltip_actiontype=Check to show 'Action Type' column
-ResultHistoryPage_no_column_selected=At least one column should be selected
-ResultHistoryPage_tooltip_auto_persist=Save result history when Eclipse shuts down and load result history to SQL Results view when Eclipse starts up
-ResultHistoryPage_tooltip_auto_clean=Clean up result history when Eclipse shuts down
+
 StatusLogger_no_bundle=No resource bundle has been set for the Logger
 StatusLogger_possible_args=\ possible args: {0}, {1}, {2}, {3}
 StatusLogger_no_bundle_1=No resource is associated with key "
@@ -354,3 +359,10 @@ ResultExportWizard_export_error=Export Error
 ResultViewLabelProvider_unknown=Unknown
 
 TextModeDisplayAction_textmode_tip=Display result in text mode
+
+ShiftListMoveRight=Re&move>>
+ShiftListMoveRightAll=R&emove All>>
+ShiftListMoveLeft=<<&Add
+ShiftListMoveLeftAll=<<Add A&ll
+ShiftListMoveUp=Move &Up
+ShiftListMoveDown=Move &Down
