NEW - bug 280025: NoSuchProfileException when using connection profile name containing colon https://bugs.eclipse.org/bugs/show_bug.cgi?id=280025

--- a/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
@@ -185,3 +185,5 @@ Boolean.true = true
 Boolean.false = false
 
 NewRepositoryWizard.title = New Repository Wizard Window
+
+NewConnectionProfileWizardPage.Status.ContainsColon= Connection profile name cannot contain colon(:)!
