NEW - bug 286083: Lack of prefix '%' in org.eclipse.datatools.enablement.oracle plugin.xml https://bugs.eclipse.org/bugs/show_bug.cgi?id=286083

--- a/plugins/org.eclipse.datatools.enablement.oracle/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.oracle/plugin.xml
@@ -14,7 +14,7 @@
       <connectionFactory
             class="org.eclipse.datatools.enablement.internal.oracle.JDBCOracleConnectionFactory"
             id="java.sql.Connection"
-            name="jdbc.connection.name"
+            name="%jdbc.connection.name"
             profile="org.eclipse.datatools.enablement.oracle.connectionProfile"/>
    </extension>
    
