NEW - bug 286082: Non-externalized string in Creating JDBC Connection to Generic JDBC dialog https://bugs.eclipse.org/bugs/show_bug.cgi?id=286082

--- a/plugins/org.eclipse.datatools.connectivity.db.generic/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.db.generic/plugin.properties
@@ -13,3 +13,4 @@ org.eclipse.datatools.connectivity.db.generic.genericDriverCategory = Generic JD
 org.eclipse.datatools.connectivity.db.generic.genericDriverTemplate = Generic JDBC Driver
 databases.category = Database Connections
 generic.profile.name = SQL Model-JDBC Connection
+jdbc.connection.name = JDBC Connection
